--- a/app/src/main/res/layout/fragment_tea_free_ice_dialog.xml
+++ b/app/src/main/res/layout/fragment_tea_free_ice_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Dialog.Coffee.CoffeeFreeIceDialogFragment">
+    tools:context=".Dialog.Coffee.CoffeeFreeIceDialog1Fragment">
     <TextView
         android:id="@+id/coffeeName"
         android:layout_width="match_parent"
@@ -33,11 +33,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.5"
+                style="@style/CustomButtonStyle"
                 android:text="얼음 조금"/>
             <Button
                 android:id="@+id/iceMax"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/CustomButtonStyle"
                 android:alpha="0.5"
                 android:text="얼음 많이"/>
         </LinearLayout>
@@ -52,6 +54,7 @@
             android:layout_weight="5"
             android:layout_height="wrap_content"
             android:text="취소"
+            style="@style/CustomButtonStyle"
             android:layout_gravity="left"/>
 
         <Button
@@ -59,6 +62,7 @@
             android:layout_width="0dp"
             android:layout_weight="5"
             android:layout_height="wrap_content"
+            style="@style/CustomButtonStyle"
             android:layout_gravity="right"
             android:text="선택완료"/>
     </LinearLayout>
