--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,8 @@
     </style>
 
     <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_base</item>
+        <item name="android:textColor">#1478FF</item>
         <item name="android:backgroundTint">@null</item>
         <item name="backgroundTint">@null</item>
     </style>
